force-app/main/default/objects/Promo_Code_Item__c/Promo_Code_Item__c.object-meta.xml
<CustomObject>
    <description>Junction record. One per OrderItem that received a discount from a Promo Code. Multiple records sharing an Application_Group_Id__c make up a single Apply event.</description>
    <label>Promo Code Item</label>
    <nameField>
        <displayFormat>PCI-{0000}</displayFormat>
        <label>Promo Code Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promo Code Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>