force-app/main/default/objects/Promo_Code_Item__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional business / sponsor Account context for the redemption (e.g., the sponsoring Account when the parent code has an Account scope, or the buying Account for partner-affiliated members). Populated by Apex at apply when applicable.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Promo Code Items (Account Context)</relationshipLabel>
    <relationshipName>Promo_Code_Items_Account</relationshipName>
    <type>Lookup</type>
</CustomField>