force-app/main/default/objects/Promo_Code_Item__c/fields/Application_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Application_Group_Id__c</fullName>
    <description>UUID stamped by Apex at apply time, shared across all junction records created in the same Apply event. Used to count "redemptions" distinctly from "lines discounted."</description>
    <externalId>true</externalId>
    <label>Application Group Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>