force-app/main/default/objects/Promo_Code_Item__c/fields/Application_Level_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Application_Level_Snapshot__c</fullName>
    <description>Copy of parent Application_Level__c at apply time. Preserves audit accuracy if parent is later exception-edited. Written by PromoCodeAllocationEngine via PromoCodeApplyService.</description>
    <label>Application Level Snapshot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Order</fullName>
            </value>
            <value>
                <fullName>Per Line</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>