force-app/main/default/objects/Promo_Code_Item__c/fields/Applied_Date__c.field-meta.xml
<CustomField>
    <fullName>Applied_Date__c</fullName>
    <description>Set when the record is created in Pending status.</description>
    <label>Applied Date</label>
    <type>DateTime</type>
</CustomField>