force-app/main/default/objects/Promo_Code_Item__c/fields/Applied_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Applied_Discount_Amount__c</fullName>
    <description>Actual currency amount discounted on this line. Cannot be re-derived after products / quantities change. Stored at apply time.</description>
    <label>Applied Discount Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>