force-app/main/default/objects/Promo_Code_Item__c/fields/Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Date__c</fullName>
    <description>Set when status flips to Confirmed (after Order Activation).</description>
    <label>Confirmed Date</label>
    <type>DateTime</type>
</CustomField>