force-app/main/default/objects/Promo_Code_Item__c/fields/Discount_Type_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Discount_Type_Snapshot__c</fullName>
    <description>Copy of parent Discount_Type__c at apply time. Preserves historical accuracy if parent is later exception-edited.</description>
    <label>Discount Type Snapshot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>