force-app/main/default/objects/Promo_Code_Item__c/fields/Discount_Value_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Discount_Value_Snapshot__c</fullName>
    <description>Copy of parent Discount_Value__c at apply time.</description>
    <label>Discount Value Snapshot</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>