force-app/main/default/objects/Promo_Code_Item__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Member account (Person Account in v1) that redeemed the code. Drives per-member usage queries directly. Populated by Apex at apply time from cart context.</description>
    <label>Member</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Promo Code Items</relationshipLabel>
    <relationshipName>Promo_Code_Items_Member</relationshipName>
    <type>Lookup</type>
</CustomField>