force-app/main/default/objects/Promo_Code_Item__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Reporting convenience. Resolves the parent Order ID via the related OrderItem.</description>
    <formula>CASESAFEID(Order_Item__r.OrderId)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Order</label>
    <type>Text</type>
</CustomField>