force-app/main/default/objects/Promo_Code_Item__c/fields/Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Order_Item__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>The order line that received the discount.</description>
    <label>Order Item</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Promo Code Items</relationshipLabel>
    <relationshipName>Promo_Code_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>