force-app/main/default/objects/Promo_Code_Item__c/fields/Product_Scope_Type_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Product_Scope_Type_Snapshot__c</fullName>
    <description>Copy of parent Product_Scope_Type__c at apply time. Preserves audit accuracy if parent is later exception-edited. Written by PromoCodeAllocationEngine via PromoCodeApplyService.</description>
    <label>Product Scope Type Snapshot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Items</fullName>
            </value>
            <value>
                <fullName>Product Family</fullName>
            </value>
            <value>
                <fullName>Specific Membership Types</fullName>
            </value>
            <value>
                <fullName>Specific Products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>