force-app/main/default/objects/Promo_Code_Item__c/fields/Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code__c</fullName>
    <description>Master-detail to the Promo Code parent. Inherits CurrencyIsoCode and sharing.</description>
    <label>Promo Code</label>
    <referenceTo>Promo_Code__c</referenceTo>
    <relationshipLabel>Promo Code Items</relationshipLabel>
    <relationshipName>Promo_Code_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>