force-app/main/default/objects/Promo_Code_Item__c/fields/Release_Reason__c.field-meta.xml
<CustomField>
    <fullName>Release_Reason__c</fullName>
    <label>Release Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cart Abandoned</fullName>
            </value>
            <value>
                <fullName>Code Removed</fullName>
            </value>
            <value>
                <fullName>Order Cancelled</fullName>
            </value>
            <value>
                <fullName>Reapplied</fullName>
            </value>
            <value>
                <fullName>TTL Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>