force-app/main/default/objects/Promo_Code_Item__c/fields/Released_Date__c.field-meta.xml
<CustomField>
    <fullName>Released_Date__c</fullName>
    <description>Set when status flips to Released (cleanup).</description>
    <label>Released Date</label>
    <type>DateTime</type>
</CustomField>