force-app/main/default/objects/Promo_Code_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Promo_Code__c</columns>
    <columns>Order_Item__c</columns>
    <columns>Member__c</columns>
    <columns>Status__c</columns>
    <columns>Applied_Discount_Amount__c</columns>
    <columns>Application_Group_Id__c</columns>
    <columns>Applied_Date__c</columns>
    <columns>Confirmed_Date__c</columns>
    <columns>Released_Date__c</columns>
    <columns>Release_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>